force-app/main/default/objects/Candidate__c/fields/Are_you_Currently_Employed__c.field-meta.xml
<CustomField>
    <fullName>Are_you_Currently_Employed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are you Currently Employed?</label>
    <type>Checkbox</type>
</CustomField>