force-app/main/default/objects/Candidate__c/fields/Candidate_Full_name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Full_name__c</fullName>
    <formula>First_Name__c  + &apos; &apos; +  Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate&apos;s Full name</label>
    <type>Text</type>
</CustomField>