force-app/main/default/objects/Candidate__c/fields/Do_you_need_visa__c.field-meta.xml
<CustomField>
    <fullName>Do_you_need_visa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you need visa?</label>
    <type>Checkbox</type>
</CustomField>