force-app/main/default/objects/Candidate__c/fields/Follow_Me_on_Twitter__c.field-meta.xml
<CustomField>
    <fullName>Follow_Me_on_Twitter__c</fullName>
    <formula>HYPERLINK(&quot;https://x.com/&quot;+ Your_Twitter_Handle__c , IMAGE(&quot;/resource/twitter&quot;,&quot;Connect With Me&quot;,28,30) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Follow Me on Twitter</label>
    <type>Text</type>
</CustomField>