force-app/main/default/objects/Candidate__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TX</fullName>
            </value>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>