force-app/main/default/objects/Candidate__c/fields/Your_Twitter_Handle__c.field-meta.xml
<CustomField>
    <fullName>Your_Twitter_Handle__c</fullName>
    <label>Your Twitter Handle</label>
    <length>200</length>
    <type>Text</type>
</CustomField>